<resources>
    <string name="app_name">TbolotovaCalculator</string>

    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="clear_button_text">C</string>
    <string name="backspace_button_text">⌫</string>
    <string name="sign_button_text">+/-</string>
    <string name="plus_button_text">+</string>
    <string name="nine_button_text">9</string>
    <string name="eight_button_text">8</string>
    <string name="seven_button_text">7</string>
    <string name="minus_button_text">-</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_number_button">6</string>
    <string name="multiply_button_text">X</string>
    <string name="three_button_text">3</string>
    <string name="divide_button_text">÷</string>
    <string name="zero_button_text">0</string>
    <string name="dot_button_text">.</string>
    <string name="equals_button_text">=</string>
    <string name="result_default_value">0</string>
    <string name="background_image_content_desc">background</string>
</resources>