<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:padding="1dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/blackboard_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/result_textview"
        android:contentDescription="@string/background_image_content_desc" />

    <!-- The first textview will be used for viewing the expression
    as it is done in other calculators. -->

    <TextView
        android:id="@+id/expression_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|right"
        android:text=""
        android:textColor="@color/text_on_text_views"
        app:autoSizeMaxTextSize="50sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/result_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:text="0" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|right"
        android:text="@string/result_default_value"
        android:textColor="@color/text_on_text_views"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/clear_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expression_textview"
        app:layout_constraintVertical_weight="2" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/clear_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/seven_number_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/backspace_button"
        app:layout_constraintTop_toBottomOf="@id/result_textview"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/backspace_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/backspace_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/eight_number_button"
        app:layout_constraintLeft_toRightOf="@id/clear_button"
        app:layout_constraintRight_toLeftOf="@id/sign_button"
        app:layout_constraintTop_toBottomOf="@id/result_textview" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/sign_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/nine_number_button"
        app:layout_constraintLeft_toRightOf="@id/backspace_button"
        app:layout_constraintRight_toLeftOf="@id/plus_button"
        app:layout_constraintTop_toBottomOf="@id/result_textview" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/plus_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/minus_button"
        app:layout_constraintLeft_toRightOf="@id/sign_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_textview" />

    <Button
        android:id="@+id/seven_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/seven_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/four_number_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight_number_button"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/eight_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/eight_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/five_number_button"
        app:layout_constraintLeft_toRightOf="@id/seven_number_button"
        app:layout_constraintRight_toLeftOf="@id/nine_number_button"
        app:layout_constraintTop_toBottomOf="@id/backspace_button" />

    <Button
        android:id="@+id/nine_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/nine_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/six_number_button"
        app:layout_constraintLeft_toRightOf="@id/eight_number_button"
        app:layout_constraintRight_toLeftOf="@id/minus_button"
        app:layout_constraintTop_toBottomOf="@id/sign_button" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/minus_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/multiply_button"
        app:layout_constraintLeft_toRightOf="@id/nine_number_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus_button" />

    <Button
        android:id="@+id/four_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/four_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/one_number_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five_number_button"
        app:layout_constraintTop_toBottomOf="@id/seven_number_button"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/five_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/five_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/two_number_button"
        app:layout_constraintLeft_toRightOf="@id/four_number_button"
        app:layout_constraintRight_toLeftOf="@id/six_number_button"
        app:layout_constraintTop_toBottomOf="@id/eight_number_button" />

    <Button
        android:id="@+id/six_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/six_number_button"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/three_number_button"
        app:layout_constraintLeft_toRightOf="@id/five_number_button"
        app:layout_constraintRight_toLeftOf="@id/multiply_button"
        app:layout_constraintTop_toBottomOf="@id/nine_number_button" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/multiply_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/divide_button"
        app:layout_constraintLeft_toRightOf="@id/six_number_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus_button" />


    <Button
        android:id="@+id/one_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/one_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/zero_number_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two_number_button"
        app:layout_constraintTop_toBottomOf="@id/four_number_button"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/two_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/two_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/zero_number_button"
        app:layout_constraintLeft_toRightOf="@id/one_number_button"
        app:layout_constraintRight_toLeftOf="@id/three_number_button"
        app:layout_constraintTop_toBottomOf="@id/five_number_button" />

    <Button
        android:id="@+id/three_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/three_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/dot_button"
        app:layout_constraintLeft_toRightOf="@id/two_number_button"
        app:layout_constraintRight_toLeftOf="@id/divide_button"
        app:layout_constraintTop_toBottomOf="@id/six_number_button" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_special"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/divide_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/equals_button"
        app:layout_constraintLeft_toRightOf="@id/three_number_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiply_button" />

    <Button
        android:id="@+id/zero_number_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/zero_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dot_button"
        app:layout_constraintTop_toBottomOf="@id/one_number_button"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/dot_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/textview_background"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/dot_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/zero_number_button"
        app:layout_constraintRight_toLeftOf="@id/equals_button"
        app:layout_constraintTop_toBottomOf="@id/three_number_button" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/equals_button"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/equals_button_text"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/dot_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divide_button" />
</androidx.constraintlayout.widget.ConstraintLayout>